docs: update plan of mini vite

--- a/packages/mini-vite/package.json
+++ b/packages/mini-vite/package.json
@@ -4,6 +4,7 @@
   "description": "A mini vite",
   "main": "index.js",
   "scripts": {
+    "build": "tsup",
     "build:watch": "tsup --watch"
   },
   "bin": {
