feat: add static server

--- a/packages/mini-vite/package.json
+++ b/packages/mini-vite/package.json
@@ -27,6 +27,7 @@
     "connect": "^3.7.0",
     "@types/connect": "^3.4.35",
     "tsup": "^6.2.3",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "sirv": "^2.0.2"
   }
 }
